--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -106,5 +106,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_MACHINE_TOKEN }}
         with:
           upload_url: ${{ env.UPLOAD_URL }}
+          asset_path: downloads/MeshInspector_${{ env.RELEASE_TAG }}_arm.pkg
           asset_name: MeshInspector_${{ env.RELEASE_TAG }}_arm.pkg
           asset_content_type: application/octet-streame
