--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -91,6 +91,7 @@ jobs:
           asset_content_type: application/octet-streame
 
       - name: Upload Apple x64 pkg
+        if: ${{ false }} 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_MACHINE_TOKEN }}
@@ -101,6 +102,7 @@ jobs:
           asset_content_type: application/octet-streame
 
       - name: Upload Apple arm pkg
+        if: ${{ false }} 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_MACHINE_TOKEN }}
