--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,7 @@ jobs:
     needs: [ find-private-release, create-public-release ]
     timeout-minutes: 20
     # The type of runner that the job will run on
-    runs-on: [self-hosted]
+    runs-on: ubuntu-latest
     env:
       UPLOAD_URL: ${{ needs.create-public-release.outputs.upload_url }}
       RELEASE_TAG: ${{ needs.find-private-release.outputs.latest_tag }}
