--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ jobs:
   find-private-release:
     timeout-minutes: 5
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, windows, x64]
     outputs:
       latest_tag: ${{ steps.latest_tag.outputs.tag}}
     steps:
