--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Push empty commit
         run: |
-          git config --global user.email "${{ secrets.MESHRUSBOT_TOKEN }}@gmail.com"
+          git config --global user.email "${{ secrets.MESHRUSBOT_EMAIL }}@gmail.com"
           git config --global user.name "MeshRusBot"
           git commit --allow-empty -m "Empty release commit"
           git tag ${{ steps.latest_tag.outputs.tag }}
