using github runner (#27)
* using github runner

* fix token

* Empty release commit

* Empty release commit

* Empty release commit

* Empty release commit

* fix token

* Empty release commit

Co-authored-by: MeshRusBot <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@gmail.com>
Co-authored-by: MeshRusBot <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@gmail.com>
Co-authored-by: MeshRusBot <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@gmail.com>
Co-authored-by: MeshRusBot <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@gmail.com>
Co-authored-by: MeshRusBot <max.raiskii@gmail.com>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,14 +11,14 @@ jobs:
   find-private-release:
     timeout-minutes: 5
     # The type of runner that the job will run on
-    runs-on: [self-hosted, windows, x64]
+    runs-on: ubuntu-latest
     outputs:
       latest_tag: ${{ steps.latest_tag.outputs.tag}}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          token: ${{ secrets.RELEASE_MACHINE_TOKEN }}
+          token: ${{ secrets.MESHRUSBOT_TOKEN }}
         
       - name: Find MeshInspector latest tag
         uses: oprypin/find-latest-tag@v1
@@ -30,6 +30,8 @@ jobs:
 
       - name: Push empty commit
         run: |
+          git config --global user.email "${{ secrets.MESHRUSBOT_EMAIL }}@gmail.com"
+          git config --global user.name "MeshRusBot"
           git commit --allow-empty -m "Empty release commit"
           git tag ${{ steps.latest_tag.outputs.tag }}
           git push
@@ -40,7 +42,7 @@ jobs:
     with:
       release_tag: ${{ needs.find-private-release.outputs.latest_tag }}
     secrets:
-      RELEASE_MACHINE_TOKEN: ${{ secrets.RELEASE_MACHINE_TOKEN }}
+      RELEASE_MACHINE_TOKEN: ${{ secrets.MESHRUSBOT_TOKEN }}
 
   upload-public-release:
     needs: [ find-private-release, create-public-release ]
