--- a/.github/workflows/create-public-release.yml
+++ b/.github/workflows/create-public-release.yml
@@ -57,7 +57,13 @@ jobs:
                 <tr>
                   <td align="center">Ubuntu 20 LTS x64</td>
                   <td align="center">
-                    <a href="${{env.RELEASE_PATH}}/meshinspector_${{inputs.release_tag}}.deb">deb</a>
+                    <a href="${{env.RELEASE_PATH}}/meshinspector_${{inputs.release_tag}}_ubuntu20.deb">deb</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td align="center">Ubuntu 22 LTS x64</td>
+                  <td align="center">
+                    <a href="${{env.RELEASE_PATH}}/meshinspector_${{inputs.release_tag}}_ubuntu22.deb">deb</a>
                   </td>
                 </tr>
                 <tr>
