--- a/.github/workflows/create-public-release.yml
+++ b/.github/workflows/create-public-release.yml
@@ -20,7 +20,17 @@ jobs:
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
+      - name: Copy Release Notes
+        run: |
+          echo ${{ secrets.BUILD_MACHINE_TOKEN }} | gh auth login --with-token
+          gh api /repos/MeshInspector/MeshInspectorCode/releases/tags/v0.0.89.27 | jq -r '. | .body' > input.txt
+          python3 parse_notes.py
+          echo "CHANGELOG=$(cat output.txt)" >> $GITHUB_ENV
+          echo $CHANGELOG
+          cat output.txt
+
       - name: Create Release
+        if: ${{false}}
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -86,3 +96,5 @@ jobs:
                 </tr>
               </tbody>
             </table>
+
+            ${{CHANGELOG}}
