--- a/.github/workflows/create-public-release.yml
+++ b/.github/workflows/create-public-release.yml
@@ -21,13 +21,14 @@ jobs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
       - name: Copy Release Notes
+        working-directory: ./.github
         run: |
           echo ${{ secrets.BUILD_MACHINE_TOKEN }} | gh auth login --with-token
           gh api /repos/MeshInspector/MeshInspectorCode/releases/tags/${{inputs.release_tag}} | jq -r '. | .body' > input.txt
           python3 parse_notes.py
-          echo "CHANGELOG=$(cat output.txt)" >> $GITHUB_ENV
-          echo $CHANGELOG
-          cat output.txt
+          CHANGELOG=$(cat output.txt)
+          echo "CHANGELOG=${CHANGELOG}" >> $GITHUB_ENV
+          echo "${{CHANGELOG}}"
 
       - name: Create Release
         if: ${{false}}
@@ -96,5 +97,3 @@ jobs:
                 </tr>
               </tbody>
             </table>
-
-            ${{CHANGELOG}}
