--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  find-private-release:
+  publish-private-release:
     timeout-minutes: 5
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
